[tool.poetry]
name = "neuralartstudio"
version = "0.1.0"
description = "App for experimenting and creating your own art using neural style transfer"
authors = ["Soumendra Dhanee <soumendra@gmail.com>"]
license = "MIT"
maintainers = ["Soumendra Dhanee <soumendra@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/soumendra/neuralartstudio"
repository = "https://github.com/soumendra/neuralartstudio"
documentation = "https://github.com/soumendra/neuralartstudio"
packages = [{include = "neuralartstudio"}]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
torchvision = "^0.6.0"
streamlit = "^0.61.0"
numpy = "^1.18.5"
pandas = "^1.0.4"
plotly = "^4.8.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
flake8 = "^3.8.3"
mypy = "^0.780"
isort = "^4.3.21"
loguru = "^0.5.1"

[tool.poetry.scripts]
fix = "scripts:fix"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
